Fix z-index carrousel

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@
 
 .p-menubar .p-submenu-list {
     background: #23be90;
+    z-index: 2!important;
 }
 
 .p-menubar .p-menubar-root-list>.p-menuitem>.p-menuitem-link .p-submenu-icon {
